--- a/todo-back/pom.xml
+++ b/todo-back/pom.xml
@@ -14,8 +14,10 @@
 	<name>back</name>
 	<description>Demo project for Spring Boot</description>
 
+	<!-- 수정 -->
 	<properties>
-		<java.version>1.8</java.version>
+        <maven-jar-plugin.version>3.1.1</maven-jar-plugin.version>
+        <java.version>1.8</java.version>
 	</properties>
 
 	<dependencies>
